# pinnx

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: Makefile  about.rst  auto_generater.py  conf.py  examples-function.rst  examples-operator.rst  examples-pinn-forward.rst  examples-pinn-inverse.rst  examples-unit.rst  examples-unitless.rst  forward_examples.md  foward_unitless_examples.md  index.rst  inverse_examples.md  unit-examples-forward.rst  unit-examples-inverse.rst
docs/apis/: pinnx.callbacks.rst  pinnx.fnspace.rst  pinnx.geometry.rst  pinnx.grad.rst  pinnx.icbc.rst  pinnx.metrics.rst  pinnx.nn.rst  pinnx.problem.rst  pinnx.rst  pinnx.utils.rst
docs/examples-function/: dataset.ipynb  dataset.py  func.ipynb  func.py  func_uncertainty.py
docs/examples-operator/: advection_aligned_pideeponet.py  advection_aligned_pideeponet_2d.py  advection_unaligned_pideeponet.py  advection_unaligned_pideeponet_2d.py  antiderivative_aligned.py  antiderivative_aligned_pideeponet.py  antiderivative_unaligned.py  antiderivative_unaligned_pideeponet.py  diff_rec_aligned_pideeponet.py  diff_rec_unaligned_pideeponet.py  poisson_1d_pideeponet.py  stokes_aligned_pideeponet.py
docs/examples-pinn-forward/: Allen_Cahn.ipynb  Allen_Cahn_unitless.py  Beltrami_flow.ipynb  Beltrami_flow.py  Burgers.py  Burgers_RAR.py  Euler_beam.ipynb  Euler_beam.py  Helmholtz_Dirichlet_2d.ipynb  Helmholtz_Dirichlet_2d.py  Helmholtz_Dirichlet_2d_HPO.py  Helmholtz_Neumann_2d_hole.py  Helmholtz_Sound_hard_ABC_2d.py  Klein_Gordon.ipynb  Klein_Gordon.py  Kovasznay_flow.ipynb  Kovasznay_flow.py  Laplace_disk.ipynb  Laplace_disk.py  Lotka_Volterra.ipynb  Lotka_Volterra.py  Poisson_Dirichlet_1d.py  Poisson_Dirichlet_1d_exactBC.py  Poisson_Lshape.py  Poisson_Neumann_1d.py  Poisson_PointSetOperator_1d.py  Poisson_Robin_1d.py  Poisson_periodic_1d.py  Schrodinger.ipynb  burgers.ipynb  diffusion_1d.ipynb  diffusion_1d.py  diffusion_1d_exactBC.py  diffusion_1d_resample.py  diffusion_reaction.py  elasticity_plate.py  fractional_Poisson_1d.py  fractional_Poisson_2d.py  fractional_Poisson_3d.py  fractional_diffusion_1d.py  (+9 more)
docs/examples-pinn-inverse/: Lorenz_inverse.py  Lorenz_inverse_forced.py  Navier_Stokes_inverse.py  brinkman_forchheimer.ipynb  brinkman_forchheimer.py  diffusion_1d_inverse.py  diffusion_reaction_rate.py  elliptic_inverse_field.py  elliptic_inverse_filed.ipynb  fractional_Poisson_1d_inverse.py  fractional_Poisson_2d_inverse.py  reaction_inverse.py
docs/function/: dataset.ipynb  func.ipynb  func_uncertainty.ipynb
docs/operator/: ADR_solver.ipynb  advection_aligned_pideeponet_2d.ipynb
docs/unit-examples-forward/: Beltrami_flow.ipynb  Beltrami_flow.py  Burgers.py  Burgers_RAR.ipynb  Burgers_RAR.py  Euler_beam.ipynb  Euler_beam.py  Helmholtz_Dirichlet_2d.ipynb  Helmholtz_Dirichlet_2d.py  Laplace_disk.ipynb  Laplace_disk.py  burgers.ipynb  diffusion_1d.ipynb  diffusion_1d.py  heat.ipynb  heat.py  heat_resample.ipynb  heat_resample.py
docs/unit-examples-inverse/: Navier_Stokes_inverse.ipynb  Navier_Stokes_inverse.py  brinkman_forchheimer.ipynb  brinkman_forchheimer.py  diffusion_1d_inverse.ipynb  diffusion_1d_inverse.py  diffusion_reaction_rate.ipynb  diffusion_reaction_rate.py  elliptic_inverse_field.py  elliptic_inverse_filed.ipynb  reaction_inverse.ipynb  reaction_inverse.py
examples/: README.md
examples/function/: dataset.py  func.py  func_uncertainty.py
examples/operator/: ADR_solver.py  advection_aligned_pideeponet.py  advection_aligned_pideeponet_2d.py  advection_unaligned_pideeponet.py  advection_unaligned_pideeponet_2d.py  antiderivative_aligned.py  antiderivative_aligned_pideeponet.py  antiderivative_unaligned.py  antiderivative_unaligned_pideeponet.py  diff_rec_aligned_pideeponet.py  diff_rec_aligned_zcs_pideeponet.py  diff_rec_unaligned_pideeponet.py  poisson_1d_pideeponet.py  stokes_aligned_pideeponet.py  stokes_aligned_zcs_pideeponet.py
examples/pinn_forward/: -Euler_beam.py  -Poisson_PointSetOperator_1d.py  -Poisson_multiscale_1d.py  -elasticity_plate.py  -wave_1d.py  Allen_Cahn.py  Beltrami_flow.py  Burgers.py  Burgers_RAR.py  Helmholtz_Dirichlet_2d.py  Helmholtz_Dirichlet_2d_HPO.py  Helmholtz_Neumann_2d_hole.py  Helmholtz_Sound_hard_ABC_2d.py  Klein_Gordon.py  Kovasznay_flow.py  Laplace_disk.py  Lotka_Volterra.py  Poisson_Dirichlet_1d.py  Poisson_Dirichlet_1d_exactBC.py  Poisson_Lshape.py  Poisson_Neumann_1d.py  Poisson_Robin_1d.py  Poisson_periodic_1d.py  Schrodinger.ipynb  Volterra_IDE.py  diffusion_1d.py  diffusion_1d_exactBC.py  diffusion_1d_resample.py  diffusion_reaction.py  fractional_Poisson_1d.py  fractional_Poisson_2d.py  fractional_Poisson_3d.py  fractional_diffusion_1d.py  heat.py  heat_resample.py  ide.py  ode_2nd.py  ode_system.py
examples/pinn_inverse/: -Lorenz_inverse_forced.py  -fractional_Poisson_1d_inverse.py  -fractional_Poisson_2d_inverse.py  Lorenz_inverse.py  Navier_Stokes_inverse.py  brinkman_forchheimer.py  diffusion_1d_inverse.py  diffusion_reaction_rate.py  elliptic_inverse_field.py  reaction_inverse.py
pinnx/: __init__.py  _convert.py  _display.py  _model.py  _trainer.py  callbacks.py  fnspace.py  grad.py  grad_test.py  metrics.py
pinnx/data/: __init__.py  data.py  dataset.py  fpde.py  (+8 more)
(+50 files in other folders)
