[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pinnx"
description = "Physics-Informed Neural Networks for Scientific Machine Learning in JAX."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PINNx Developers", email = "chao.brain@qq.com" }]
keywords = [
    "computational neuroscience",
    "brain-inspired computation",
    "brain dynamics programming",
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy",
    "jax",
    "brainunit>=0.0.3",
    "matplotlib",
    "brainstate",
    "braintools",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/chaobrain/pinnx"
Documentation = "https://pinnx.readthedocs.io/"
"Source Code" = "https://github.com/chaobrain/pinnx"
"Bug Tracker" = "https://github.com/chaobrain/pinnx/issues"

[project.optional-dependencies]
cpu = ["jaxlib"]
cuda12 = ["jaxlib[cuda12]"]
cuda13 = ["jaxlib[cuda13]"]
tpu = ["jaxlib[tpu]"]
testing = ["pytest"]

[tool.setuptools.packages.find]
exclude = [
    "dev*",
    "docs*",
    "tests*",
    "examples*",
    "experiments*",
    "build*",
    "dist*",
    "pinnx.egg-info*",
    "pinnx/__pycache__*",
]
